--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,26 +7,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 Include(FetchContent)
 
-# Get glfw
-FetchContent_Declare(
-  glfw
-  GIT_REPOSITORY https://github.com/glfw/glfw.git
+# Get SDL
+set(SDL_SHARED false)
+set(SDL_STATIC true)
+FetchContent_Declare(SDL
+  GIT_REPOSITORY https://github.com/libsdl-org/SDL
+  GIT_TAG main
 )
-FetchContent_GetProperties(glfw)
-if(NOT glfw_POPULATED)
-    FetchContent_Populate(glfw)
-
-    set(GLFW_BUILD_EXAMPLES OFF CACHE INTERNAL "Build the GLFW example programs")
-    set(GLFW_BUILD_TESTS OFF CACHE INTERNAL "Build the GLFW test programs")
-    set(GLFW_BUILD_DOCS OFF CACHE INTERNAL "Build the GLFW documentation")
-    set(GLFW_INSTALL OFF CACHE INTERNAL "Generate installation target")
-
-    add_subdirectory(${glfw_SOURCE_DIR} ${glfw_BINARY_DIR})
-endif()
-
+FetchContent_MakeAvailable(SDL)
+  
 # Get spdlog
-FetchContent_Declare(
-  spdlog
+FetchContent_Declare(spdlog
   GIT_REPOSITORY https://github.com/gabime/spdlog.git
   GIT_TAG v1.x
 )
@@ -35,23 +26,27 @@ FetchContent_MakeAvailable(spdlog)
 # Sparrow executable
 file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 file(GLOB_RECURSE INC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
+
 add_executable(sparrow
   ${SRC_FILES}
   ${INC_FILES}
 )
+
 target_include_directories(sparrow
   PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/include/
 )
+
 target_link_libraries(sparrow
   PRIVATE
-  glfw
+  SDL3::SDL3-static
   spdlog
 )
+
 if(MSVC)
   target_compile_options(sparrow PRIVATE /W4 /WX)
 else()
-  target_compile_options(sparrow PRIVATE -Wall -Wextra -Wpedantic -Werror)
+  target_compile_options(sparrow PRIVATE -Wall -Wextra -Wpedantic)
 endif()
 
 # Sparrow tests
@@ -61,14 +56,22 @@ FetchContent_Declare(
   GIT_TAG        v3.4.0
 )
 FetchContent_MakeAvailable(Catch2)
+
 file(GLOB_RECURSE TEST_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp)
-add_executable(tests ${TEST_SRC_FILES} ${SPARROW_SRC_FILES})
-target_include_directories(tests
+file(GLOB_RECURSE SPARROW_SRC_FILES_WITHOUT_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+list(REMOVE_ITEM  SPARROW_SRC_FILES_WITHOUT_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
+
+add_executable(test
+  ${TEST_SRC_FILES}
+  ${SPARROW_SRC_FILES_WITHOUT_MAIN}
+)
+
+target_include_directories(test
   PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/include/
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/
 )
-target_link_libraries(tests
+
+target_link_libraries(test
   PRIVATE
   Catch2::Catch2WithMain
   spdlog
