--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,23 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 Include(FetchContent)
 
-# Get SDL
-set(SDL_SHARED false)
-set(SDL_STATIC true)
-FetchContent_Declare(SDL
-  GIT_REPOSITORY https://github.com/libsdl-org/SDL
-  GIT_TAG main
+# Get glfw
+FetchContent_Declare(
+  glfw
+  GIT_REPOSITORY https://github.com/glfw/glfw.git
 )
-FetchContent_MakeAvailable(SDL)
-  
+FetchContent_GetProperties(glfw)
+if(NOT glfw_POPULATED)
+    FetchContent_Populate(glfw)
+
+    set(GLFW_BUILD_EXAMPLES OFF CACHE INTERNAL "Build the GLFW example programs")
+    set(GLFW_BUILD_TESTS OFF CACHE INTERNAL "Build the GLFW test programs")
+    set(GLFW_BUILD_DOCS OFF CACHE INTERNAL "Build the GLFW documentation")
+    set(GLFW_INSTALL OFF CACHE INTERNAL "Generate installation target")
+
+    add_subdirectory(${glfw_SOURCE_DIR} ${glfw_BINARY_DIR})
+endif()
+
 # Get spdlog
 FetchContent_Declare(spdlog
   GIT_REPOSITORY https://github.com/gabime/spdlog.git
@@ -39,14 +47,14 @@ target_include_directories(sparrow
 
 target_link_libraries(sparrow
   PRIVATE
-  SDL3::SDL3-static
+  glfw
   spdlog
 )
 
 if(MSVC)
   target_compile_options(sparrow PRIVATE /W4 /WX)
 else()
-  target_compile_options(sparrow PRIVATE -Wall -Wextra -Wpedantic)
+  target_compile_options(sparrow PRIVATE -Wall -Wextra -Wpedantic -ggdb -O0)
 endif()
 
 # Sparrow tests
