--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Make build directory
-      run: mkdir -p build && cd build
+      run: mkdir -p build
     - name: Configure
-      run: cmake ..
+      run: cd build && cmake ..
     - name: make
-      run: make
+      run: make -C build/
     - name: test
       run: ./test
