--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Update packages
       run: sudo apt-get update -y
     - name: Install dependencies
-      run: sudo apt-get install -y libxrandr-dev libxinerama-dev
+      run: sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev
     - name: Make build directory
       run: mkdir -p build
     - name: Configure
