--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(sparrow VERSION 0.0.1 LANGUAGES CXX)
+project(sparrow VERSION 0.0.1 LANGUAGES C)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 
 Include(FetchContent)
 
@@ -24,16 +24,9 @@ if(NOT glfw_POPULATED)
     add_subdirectory(${glfw_SOURCE_DIR} ${glfw_BINARY_DIR})
 endif()
 
-# Get spdlog
-FetchContent_Declare(spdlog
-  GIT_REPOSITORY https://github.com/gabime/spdlog.git
-  GIT_TAG v1.x
-)
-FetchContent_MakeAvailable(spdlog)
-
 # Sparrow executable
-file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
-file(GLOB_RECURSE INC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
+file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
+file(GLOB_RECURSE INC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
 
 add_executable(sparrow
   ${SRC_FILES}
@@ -48,7 +41,6 @@ target_include_directories(sparrow
 target_link_libraries(sparrow
   PRIVATE
   glfw
-  spdlog
 )
 
 if(MSVC)
@@ -58,29 +50,28 @@ else()
 endif()
 
 # Sparrow tests
-FetchContent_Declare(
-  Catch2
-  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-  GIT_TAG        v3.4.0
-)
-FetchContent_MakeAvailable(Catch2)
+# FetchContent_Declare(
+  # Catch2
+  # GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  # GIT_TAG        v3.4.0
+# )
+# FetchContent_MakeAvailable(Catch2)
 
-file(GLOB_RECURSE TEST_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp)
-file(GLOB_RECURSE SPARROW_SRC_FILES_WITHOUT_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
-list(REMOVE_ITEM  SPARROW_SRC_FILES_WITHOUT_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
+# file(GLOB_RECURSE TEST_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp)
+# file(GLOB_RECURSE SPARROW_SRC_FILES_WITHOUT_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+# list(REMOVE_ITEM  SPARROW_SRC_FILES_WITHOUT_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 
-add_executable(test
-  ${TEST_SRC_FILES}
-  ${SPARROW_SRC_FILES_WITHOUT_MAIN}
-)
+# add_executable(test
+  # ${TEST_SRC_FILES}
+  # ${SPARROW_SRC_FILES_WITHOUT_MAIN}
+# )
 
-target_include_directories(test
-  PRIVATE
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/
-)
+# target_include_directories(test
+  # PRIVATE
+  # ${CMAKE_CURRENT_SOURCE_DIR}/include/
+# )
 
-target_link_libraries(test
-  PRIVATE
-  Catch2::Catch2WithMain
-  spdlog
-)
+# target_link_libraries(test
+  # PRIVATE
+  # Catch2::Catch2WithMain
+# )
