Update and rename c-cpp.yml to tests.yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
       run: mkdir -p build
     - name: Configure
       run: cd build && cmake ..
-    - name: make
+    - name: make test
       run: make -C build/ -k -j`nproc`
     - name: test
       run: ./build/test
