Translated README from org-mode to markdown. Made workflow to build and release sparrow (#8)
* Add test workflow (#3)

Added github workflow to verify that tests pass.

* Using C11 instead of C++20. Removed spdlog as it is C++ only. Started work on custom-made logging system, but it has a lot of improvement potential.

* Improved logger, seems to be working fine for now.

I might look into improving it more later. Each log expands out to one call to an internal function (which should be executed very quickly after the first call. Each log also expands to three fprintf calls.)

* Fixed a rebasing hell

* Make test executable be output to root build directory

* Update and rename c-cpp.yml to tests.yml

* Switched from using org-mode to markdown in README file

* Test status & Release (#7)

* Update README.md

* Update tests.yml

* Create release.yml

* Update tests.yml

* Update README.md

* Update tests.yml

* Update README.md

* Update release.yml

* Update README.md

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: tests
 
 on:
   push:
@@ -25,7 +25,7 @@ jobs:
       run: mkdir -p build
     - name: Configure
       run: cd build && cmake ..
-    - name: make
-      run: make -C build/ -k -j`nproc`
+    - name: make test
+      run: make -C build/ -k -j`nproc` test
     - name: test
       run: ./build/test
