--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ target_link_libraries(sparrow
 if(MSVC)
   target_compile_options(sparrow PRIVATE /W4 /WX)
 else()
-  target_compile_options(sparrow PRIVATE -Wall -Wextra -Wpedantic -ggdb -O0)
+  target_compile_options(sparrow PRIVATE -Wall -Wextra -Wpedantic -ggdb -O0 -Wno-unused-variable)
 endif()
 
 add_subdirectory(tests)
